--- a/helm/tarscontroller/Chart.yaml
+++ b/helm/tarscontroller/Chart.yaml
@@ -1,7 +1,10 @@
 apiVersion: v2
 name: tarscontroller
 version: _CHART_VERSION_
-kubeVersion: ">= 1.17.0-alpha <= 1.24.0-alpha"
+kubeVersion: ">= 1.18.0 < 2.0.0"
 type: application
-keywords: [tars, tarscontroller]
+keywords: [ tars, tarscontroller ]
 appVersion: _CHART_APPVERSION_
+dependencies:
+  - name: crds
+    version: _CHART_VERSION_
