--- a/helm/tarscontroller/charts/crds/templates/TAccount.yaml
+++ b/helm/tarscontroller/charts/crds/templates/TAccount.yaml
@@ -2,6 +2,8 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   name: taccounts.k8s.tars.io
+  annotations:
+    "helm.sh/resource-policy": keep
 spec:
   conversion:
     strategy: None
@@ -15,10 +17,20 @@ spec:
   scope: Namespaced
   versions:
     - name: v1beta1
-      served: _V1BETA1_SERVED_
-      storage: _V1BETA1_STORAGE_
+      {{- if has "v1beta1" .Values.servers}}
+      served: true
+      {{- else }}
+      served: false
+      {{- end }}
+      {{- if eq "v1beta1" .Values.storage}}
+      storage: true
+      {{- else }}
+      storage: false
+      {{- end }}
+      {{- if semverCompare ">=1.19.x" $.Capabilities.KubeVersion.Version }}
       deprecated: true
       deprecationWarning: "k8s.tars.io/v1beta1 TAccount is deprecated; please migrate to k8s.tars.io/v1beta3 TAccount"
+      {{- end}}
       schema:
         openAPIV3Schema:
           type: object
@@ -94,10 +106,20 @@ spec:
                   required: [ role,flag ]
               required: [ username,authentication,authorization ]
     - name: v1beta2
-      served: _V1BETA2_SERVED_
-      storage: _V1BETA2_STORAGE_
+      {{- if has "v1beta2" .Values.servers}}
+      served: true
+      {{- else }}
+      served: false
+      {{- end }}
+      {{- if eq "v1beta2" .Values.storage}}
+      storage: true
+      {{- else }}
+      storage: false
+      {{- end }}
+      {{- if semverCompare ">=1.19.x" $.Capabilities.KubeVersion.Version }}
       deprecated: true
       deprecationWarning: "k8s.tars.io/v1beta2 TAccount is deprecated; please migrate to k8s.tars.io/v1beta3 TAccount"
+      {{- end}}
       schema:
         openAPIV3Schema:
           type: object
@@ -177,8 +199,16 @@ spec:
           type: string
           jsonPath: .spec.username
     - name: v1beta3
-      served: _V1BETA3_SERVED_
-      storage: _V1BETA3_STORAGE_
+      {{- if has "v1beta3" .Values.servers}}
+      served: true
+      {{- else }}
+      served: false
+      {{- end }}
+      {{- if eq "v1beta3" .Values.storage}}
+      storage: true
+      {{- else }}
+      storage: false
+      {{- end }}
       schema:
         openAPIV3Schema:
           type: object
