--- a/helm/tarscontroller/charts/crds/templates/TFrameworkConfig.yaml
+++ b/helm/tarscontroller/charts/crds/templates/TFrameworkConfig.yaml
@@ -2,6 +2,8 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   name: tframeworkconfigs.k8s.tars.io
+  annotations:
+    "helm.sh/resource-policy": keep
 spec:
   conversion:
     strategy: Webhook
@@ -24,10 +26,20 @@ spec:
   scope: Namespaced
   versions:
     - name: v1beta2
-      served: _V1BETA2_SERVED_
-      storage: _V1BETA2_STORAGE_
+      {{- if has "v1beta2" .Values.servers}}
+      served: true
+      {{- else }}
+      served: false
+      {{- end }}
+      {{- if eq "v1beta2" .Values.storage}}
+      storage: true
+      {{- else }}
+      storage: false
+      {{- end }}
+      {{- if semverCompare ">=1.19.x" $.Capabilities.KubeVersion.Version }}
       deprecated: true
-      deprecationWarning: "k8s.tars.io/v1beta1 TFrameworkConfig is deprecated; please migrate to k8s.tars.io/v1beta3 TFrameworkConfig"
+      deprecationWarning: "k8s.tars.io/v1beta2 TFrameworkConfig is deprecated; please migrate to k8s.tars.io/v1beta3 TFrameworkConfig"
+      {{- end}}
       schema:
         openAPIV3Schema:
           type: object
@@ -105,6 +117,9 @@ spec:
                     timeout:
                       type: integer
                       default: 6000
+                    isTcp:
+                      type: boolean
+                      default: true
                 minItems: 1
                 required: [ host,port ]
               default: { }
@@ -115,8 +130,16 @@ spec:
               default: { }
           required: [ imageRegistry,nodeImage ]
     - name: v1beta3
-      served: _V1BETA3_SERVED_
-      storage: _V1BETA3_STORAGE_
+      {{- if has "v1beta3" .Values.servers}}
+      served: true
+      {{- else }}
+      served: false
+      {{- end }}
+      {{- if or (eq "v1beta3" .Values.storage )  (eq "v1beta1" .Values.storage)}}
+      storage: true
+      {{- else }}
+      storage: false
+      {{- end }}
       schema:
         openAPIV3Schema:
           type: object
@@ -205,6 +228,9 @@ spec:
                     timeout:
                       type: integer
                       default: 6000
+                    isTcp:
+                      type: boolean
+                      default: true
                 minItems: 1
                 required: [ host,port ]
               default: { }
