--- a/helm/tarscontroller/charts/crds/templates/TFrameworkKey.yaml
+++ b/helm/tarscontroller/charts/crds/templates/TFrameworkKey.yaml
@@ -2,6 +2,8 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   name: tframeworkkey.k8s.tars.io
+  annotations:
+    "helm.sh/resource-policy": keep
 spec:
   conversion:
     strategy: None
@@ -15,10 +17,20 @@ spec:
   scope: Namespaced
   versions:
     - name: v1beta2
+      {{- if has "v1beta2" .Values.servers}}
       served: true
+      {{- else }}
+      served: false
+      {{- end }}
+      {{- if eq "v1beta2" .Values.storage}}
+      storage: true
+      {{- else }}
       storage: false
+      {{- end }}
+      {{- if semverCompare ">=1.19.x" $.Capabilities.KubeVersion.Version }}
       deprecated: true
       deprecationWarning: "k8s.tars.io/v1beta2 TFrameworkKey is deprecated; please migrate to k8s.tars.io/v1beta3 TFrameworkKey"
+      {{- end}}
       schema:
         openAPIV3Schema:
           type: object
@@ -33,8 +45,16 @@ spec:
                 autologin:
                   type: integer
     - name: v1beta3
+      {{- if has "v1beta3" .Values.servers}}
       served: true
+      {{- else }}
+      served: false
+      {{- end }}
+      {{- if or (eq "v1beta3" .Values.storage )  (eq "v1beta1" .Values.storage)}}
       storage: true
+      {{- else }}
+      storage: false
+      {{- end }}
       schema:
         openAPIV3Schema:
           type: object
