--- a/helm/tarscontroller/charts/crds/templates/TImage.yaml
+++ b/helm/tarscontroller/charts/crds/templates/TImage.yaml
@@ -2,6 +2,8 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   name: timages.k8s.tars.io
+  annotations:
+    "helm.sh/resource-policy": keep
 spec:
   conversion:
     strategy: None
@@ -15,10 +17,20 @@ spec:
   scope: Namespaced
   versions:
     - name: v1beta1
-      served: _V1BETA1_SERVED_
-      storage: _V1BETA1_STORAGE_
+      {{- if has "v1beta1" .Values.servers}}
+      served: true
+      {{- else }}
+      served: false
+      {{- end }}
+      {{- if eq "v1beta1" .Values.storage}}
+      storage: true
+      {{- else }}
+      storage: false
+      {{- end }}
+      {{- if semverCompare ">=1.19.x" $.Capabilities.KubeVersion.Version }}
       deprecated: true
       deprecationWarning: "k8s.tars.io/v1beta1 TImage is deprecated; please migrate to k8s.tars.io/v1beta3 TImage"
+      {{- end}}
       schema:
         openAPIV3Schema:
           type: object
@@ -155,10 +167,20 @@ spec:
                       maxLength: 253
                   required: [ id,baseImage,image ]
     - name: v1beta2
-      served: _V1BETA2_SERVED_
-      storage: _V1BETA2_STORAGE_
+      {{- if has "v1beta2" .Values.servers}}
+      served: true
+      {{- else }}
+      served: false
+      {{- end }}
+      {{- if eq "v1beta2" .Values.storage}}
+      storage: true
+      {{- else }}
+      storage: false
+      {{- end }}
+      {{- if semverCompare ">=1.19.x" $.Capabilities.KubeVersion.Version }}
       deprecated: true
       deprecationWarning: "k8s.tars.io/v1beta2 TImage is deprecated; please migrate to k8s.tars.io/v1beta3 TImage"
+      {{- end}}
       schema:
         openAPIV3Schema:
           type: object
@@ -293,8 +315,16 @@ spec:
                       maxLength: 253
                   required: [ id,baseImage,image ]
     - name: v1beta3
-      served: _V1BETA3_SERVED_
-      storage: _V1BETA3_STORAGE_
+      {{- if has "v1beta3" .Values.servers}}
+      served: true
+      {{- else }}
+      served: false
+      {{- end }}
+      {{- if eq "v1beta3" .Values.storage}}
+      storage: true
+      {{- else }}
+      storage: false
+      {{- end }}
       schema:
         openAPIV3Schema:
           type: object
@@ -428,3 +458,7 @@ spec:
                       type: string
                       maxLength: 253
                   required: [ id,baseImage,image ]
+      additionalPrinterColumns:
+        - name: type
+          type: string
+          jsonPath: .imageType
