--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -63,7 +63,7 @@ jobs:
       fail-fast: false
       matrix:
         kindest: [ v1.18.20,v1.19.16,v1.20.15,v1.21.12,v1.22.7,v1.23.6,v1.24.3 ]
-        storage: [ v1beta1,v1beta2,v1beta3 ]
+        storage: [ v1beta2,v1beta3 ]
     runs-on: ubuntu-latest
     timeout-minutes: 90
     env:
