--- a/.github/workflows/build-cpp-compiler-centos.yml
+++ b/.github/workflows/build-cpp-compiler-centos.yml
@@ -8,7 +8,7 @@ on:
       - ".github/workflows/build-cpp-compiler-centos.yml"
       - "compiler/tools/**"
       - "compiler/cpp-compiler-centos.Dockerfile"
-      - "submodule/TarsCpp/**"
+      - "submodule/TarsCpp"
   pull_request:
     branches:
       - master
@@ -16,7 +16,7 @@ on:
       - ".github/workflows/build-cpp-compiler-centos.yml"
       - "compiler/tools/**"
       - "compiler/cpp-compiler-centos.Dockerfile"
-      - "submodule/TarsCpp/**"
+      - "submodule/TarsCpp"
 
 jobs:
   build:
