--- a/.github/workflows/latest.yaml
+++ b/.github/workflows/latest.yaml
@@ -22,6 +22,9 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v3
 
+      - name: Build And Push Base Images
+        run: make base BUILD_VERSION=latest PLATFORMS='linux/amd64 linux/arm64'
+
       - name: Build And Push Controller Server Image
         run: make controller BUILD_VERSION=latest PLATFORMS='linux/amd64 linux/arm64'
 
